## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.2 2005/05/30 20:28:45 sjborley Exp $

noinst_LIBRARIES = libwindisp.a

libwindisp_a_SOURCES = \
	windisp.c	\
	windisp.h	\
	winprint.c	\
	winprint.h	\
	ftegraf.h
	
	
INCLUDES = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/frontend/wdisp

MAINTAINERCLEANFILES = Makefile.in
